# jsk_recognition

jsk_recognition_msgs/: CMakeLists.txt  package.xml  setup.py
jsk_recognition_msgs/msg/: ExifTags.msg  ICPResult.msg
