<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>jsk_recognition_msgs</name>
  <version>1.2.17</version>
  <description>ROS messages for jsk_pcl_ros and jsk_perception.</description>
  
  <maintainer email="ueda@jsk.t.u-tokyo.ac.jp">Ryohei Ueda</maintainer>
  <license>BSD</license>

  <url type="repository">http://github.com/jsk-ros-pkg/jsk_recognition</url>
  <url type="bugtracker">http://github.com/jsk-ros-pkg/jsk_recognition/issues</url>
  <url type="website">https://jsk-docs.readthedocs.io/projects/jsk_recognition/en/latest/jsk_recognition_msgs</url>
  <build_depend>rosidl_default_generators</build_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <depend>pcl_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>builtin_interfaces</depend>



  <!--<depend>jsk_footstep_msgs</depend>--> 

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
